@@ -34,7 +34,7 @@ local DRData = LibStub("DRData-1.0", true)
 TELLMEWHEN_VERSION = "4.5.0"
 TELLMEWHEN_VERSION_MINOR = strmatch(" @project-version@", " r%d+") or ""
 TELLMEWHEN_VERSION_FULL = TELLMEWHEN_VERSION .. TELLMEWHEN_VERSION_MINOR
-TELLMEWHEN_VERSIONNUMBER = 45008 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
+TELLMEWHEN_VERSIONNUMBER = 45009 -- NEVER DECREASE THIS NUMBER (duh?).  IT IS ALSO ONLY INTERNAL
 if TELLMEWHEN_VERSIONNUMBER > 46000 or TELLMEWHEN_VERSIONNUMBER < 45000 then return error("YOU SCREWED UP THE VERSION NUMBER OR DIDNT CHANGE THE SAFETY LIMITS") end -- safety check because i accidentally made the version number 414069 once
 
 TELLMEWHEN_MAXGROUPS = 1 	--this is a default, used by SetTheory (addon), so dont rename
@@ -2828,7 +2828,6 @@ function TMW:Icon_Update(icon)
 
 	local dontremove
 	for event, tbl in pairs(icon.Events) do
-		icon[event] = tbl
 		for key, data in pairs(tbl) do
 			if key == "Sound" then
 				if data == "" or data == "Interface\\Quiet.ogg" or data == "None" then
@@ -2849,6 +2848,9 @@ function TMW:Icon_Update(icon)
 			elseif key == "Channel" and data ~= "" then
 				dontremove = 1
 			end
+		end
+		if tbl.SoundData or tbl.Channel ~= "" then
+			icon[event] = tbl
 		end
 	end
 
@@ -3083,17 +3085,20 @@ function string:toseconds()
     return seconds
     
 end
+local function lower(str)
+	return tonumber(str) or strlower(str)
+end
 
 local eqttcache = {}
 function TMW:EquivToTable(name)
 	if eqttcache[name] then return eqttcache[name] end -- if we already made a table of this string, then use it
-	name = strlower(name)
+	name = lower(name)
 	local eqname, duration = strmatch(name, "(.-):([%d:%s%.]*)$")
 	name = eqname or name
 	local names
 	for k, v in pairs(TMW.BE) do -- check in subtables ('buffs', 'debuffs', 'casts', etc)
 		for equiv, str in pairs(v) do
-			if strlower(equiv) == name and (TMW.BE ~= TMW.OldBE or equiv ~= "Enraged") then -- dont expand the enrage equiv if we are hacking with OldBE
+			if lower(equiv) == name and (TMW.BE ~= TMW.OldBE or equiv ~= "Enraged") then -- dont expand the enrage equiv if we are hacking with OldBE
 				names = str
 				break
 			end
@@ -3105,8 +3110,7 @@ function TMW:EquivToTable(name)
 
 	local tbl = { strsplit(";", names) } -- split the string into a table
 	for a, b in pairs(tbl) do
-		local new = strtrim(b) -- take off trailing spaces
-		new = tonumber(new) or new -- make sure it is a number if it can be
+		local new = lower(strtrim(b)) -- take off trailing spaces
 		if duration then
 			new = new .. ":" .. duration
 		end
@@ -3154,8 +3158,7 @@ function TMW:GetSpellNames(icon, setting, firstOnly, toname, hash, keepDurations
 	if not keepDurations then
 		for k, buffName in pairs(buffNames) do
 			if strfind(buffName, ":[%d:%s%.]*$") then
-				local new = strmatch(buffName, "(.-):[%d:%s%.]*$")
-				buffNames[k] = tonumber(new) or new -- turn it into a number if it is one
+				buffNames[k] = lower(strmatch(buffName, "(.-):[%d:%s%.]*$"))
 			end
 		end
 	end
@@ -3167,10 +3170,10 @@ function TMW:GetSpellNames(icon, setting, firstOnly, toname, hash, keepDurations
 				v = GetSpellInfo(v or "") or v -- turn the value into a name if needed
 			end
 			if type(v) == "string" then -- all hash table lookups use the lowercase string to negate case sensitivity
-				v = strlower(v)
+				v = lower(v)
 			end
 			for ds in pairs(TMW.DS) do	--EXCEPT dispel types, they retain their capitalization. Restore it here.
-				if strlower(ds) == v then
+				if lower(ds) == v then
 					v = ds
 				end
 			end
@@ -3181,20 +3184,20 @@ function TMW:GetSpellNames(icon, setting, firstOnly, toname, hash, keepDurations
 	end
 	if toname then
 		if firstOnly then
-			local ret = GetSpellInfo(buffNames[1] or "") or buffNames[1] -- turn the first value into a name and return it
+			local ret = lower(GetSpellInfo(buffNames[1] or "") or buffNames[1]) -- turn the first value into a name and return it
 			gsncache[cachestring] = ret
 			return ret
 		else
 			for k, v in ipairs(buffNames) do
-				buffNames[k] = GetSpellInfo(v or "") or v --convert everything to a name
+				buffNames[k] = lower(GetSpellInfo(v or "") or v) --convert everything to a name
 			end
 			gsncache[cachestring] = buffNames
 			return buffNames
 		end
 	end
 	if firstOnly then
-		gsncache[cachestring] = buffNames[1] or ""
-		return buffNames[1] or ""
+		gsncache[cachestring] = lower(buffNames[1] or "")
+		return gsncache[cachestring]
 	end
 	gsncache[cachestring] = buffNames
 	return buffNames
@@ -3340,8 +3343,7 @@ function TMW:SplitNames(input)
 	local tbl = { strsplit(";", input) }
 
 	for a, b in ipairs(tbl) do
-		local new = strtrim(b) --remove spaces from the beginning and end of each name
-		tbl[a] = tonumber(new) or new -- turn it into a number if it is one
+		tbl[a] = lower(strtrim(b))
 	end
 	return tbl
 end
