@@ -3,6 +3,8 @@
  * You can now set custom text to be displayed where a keybinding would normally be displayed in order to remind you of your keybindings directly on TMW icons.
  * Moving/resizing a group that is anchored to a frame other than UIParent will adjust the offsets instead of resetting the anchor to UIParent.
  * Reactive icons and conditions should now more accurately reflect the state of the abilities that they are checking.
+ * Improved rune cooldown detection.
+ * NOTE TO TESTERS: BE ON THE LOOKOUT FOR THINGS THAT DONT WORK PROPERLY WITH SPELL NAMES! THERE WERE SOME CHANGES THAT COULD AFFECT THIS!
  * Version warnings should be slightly less annoying.
  * New icon events:
  ** On Alpha Increase
